--- a/Tuesday_Lesson_Inclass_Lecture-Starter.ipynb
+++ b/Tuesday_Lesson_Inclass_Lecture-Starter.ipynb
@@ -5438,17 +5438,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# \"Example\" -> 3\n",
     "# \"Hello World\" -> 3\n",
     "# \"Brian\" -> 2\n",
     "# \"This is a longer response\" -> 8\n",
+    "# vowels = a, e, i, o, and u\n",
     "\n",
+    "vowels = ('a', 'e', 'i', 'o', 'u')\n",
+    "input_str = list(input('Type whatever you want').lower())\n",
+    "output = 0\n",
     "\n",
-    "\n"
+    "for char in input_str:\n",
+    "    if char in vowels:\n",
+    "        output += 1\n",
+    "\n",
+    "print(output)"
    ]
   },
   {
