--- a/Tuesday_Lesson_Inclass_Lecture-Starter.ipynb
+++ b/Tuesday_Lesson_Inclass_Lecture-Starter.ipynb
@@ -5487,21 +5487,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Connor', 'Connor', 'Connor', 'Evan', 'Evan', 'Kevin']\n"
+     ]
+    }
+   ],
    "source": [
-    "names1 = ['connor', 'connor', 'bob', 'connor', 'evan', 'max', 'evan', 'bob', 'kevin']\n"
+    "names1 = ['connor', 'connor', 'bob', 'connor', 'evan', 'max', 'evan', 'bob', 'kevin']\n",
+    "\n",
+    "\n",
+    "long_names = [name.capitalize() for name in names1 if len(name) > 3]\n",
+    "print(long_names)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Connor', 'Connor', 'Connor', 'Evan', 'Evan', 'Kevin']\n"
+     ]
+    }
+   ],
    "source": [
     "# Bonus Challenge\n",
-    "names2 = ['connor', 'connor', 'bob', 'connor', 'evan', 'max', 'evan', 2, 2, 2, 3, 3, 4, 'bob', 'kevin']\n"
+    "names2 = ['connor', 'connor', 'bob', 'connor', 'evan', 'max', 'evan', 2, 2, 2, 3, 3, 4, 'bob', 'kevin']\n",
+    "\n",
+    "long_names = [name.capitalize() for name in names1 if len(name) > 3]\n",
+    "print(long_names)"
    ]
   },
   {
